--- a/_includes/head.html
+++ b/_includes/head.html
@@ -127,18 +127,18 @@ p.pos_fixed {
 
 <div id="navi-bar">
     <ul>
-        <li><a href="http://minhhuy150894.github.io"><b>Home</b></a></li>
-        <li><a href="http://minhhuy150894.github.io/posts/"><b>All Posts</b> &#9660;</a></li>
-        <li><a href="http://minhhuy150894.github.io/tags/"><b>Categories</b> &#9660;</a></li>
-        <li><a href="http://minhhuy150894.github.io/Documents-download/"><b>Documents</b></a></li>
-        <li><a href="http://minhhuy150894.github.io/Ask-me/"><b>Ask Me?</b></a></li>
-        <li><a href="http://minhhuy150894.github.io/about/"><b>About Me</b></a></li>
+        <li><a href="http://zichundai.github.io"><b>Home</b></a></li>
+        <li><a href="http://zichundai.github.io/posts/"><b>All Posts</b> &#9660;</a></li>
+        <li><a href="http://zichundai.github.io/tags/"><b>Categories</b> &#9660;</a></li>
+        <li><a href="http://zichundai.github.io/Documents-download/"><b>Documents</b></a></li>
+        <li><a href="http://zichundai.github.io/Ask-me/"><b>Ask Me?</b></a></li>
+        <li><a href="http://zichundai.github.io/about/"><b>About Me</b></a></li>
     </ul>
 </div>
 
 <!--<div id="sidebar">
     <ul>
-        <a href="http://minhhuy150894.github.io"><img src="https://scontent-hkg3-1.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/10384363_429420063898285_6259601134916857203_n.jpg?oh=e313439f8022d0d4a0dc861f1b19c1a4&oe=55EA9F33" width="200"></a>
+        <a href="http://zichundai.github.io"><img src="https://scontent-hkg3-1.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/10384363_429420063898285_6259601134916857203_n.jpg?oh=e313439f8022d0d4a0dc861f1b19c1a4&oe=55EA9F33" width="200"></a>
     <br>
     <p>&#9829; have a nice day !</p>
     
