--- a/_includes/head.html
+++ b/_includes/head.html
@@ -127,12 +127,12 @@ p.pos_fixed {
 
 <div id="navi-bar">
     <ul>
-        <li><a href="http://zichundai.github.io"><b>Home</b></a></li>
-        <li><a href="http://zichundai.github.io/posts/"><b>All Posts</b> &#9660;</a></li>
-        <li><a href="http://zichundai.github.io/tags/"><b>Categories</b> &#9660;</a></li>
-        <li><a href="http://zichundai.github.io/Documents-download/"><b>Documents</b></a></li>
-        <li><a href="http://zichundai.github.io/Ask-me/"><b>Ask Me?</b></a></li>
-        <li><a href="http://zichundai.github.io/about/"><b>About Me</b></a></li>
+        <li><a href="http://zichundai.github.io"><b>主页</b></a></li>
+        <li><a href="http://zichundai.github.io/posts/"><b>所有文章</b> &#9660;</a></li>
+        <li><a href="http://zichundai.github.io/tags/"><b>分类</b> &#9660;</a></li>
+        <li><a href="http://zichundai.github.io/Documents-download/"><b>文档</b></a></li>
+        <li><a href="http://zichundai.github.io/Ask-me/"><b>联系我?</b></a></li>
+        <li><a href="http://zichundai.github.io/about/"><b>关于我</b></a></li>
     </ul>
 </div>
 
