--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ layout: default
 	  {% endif %}
 	{% endfor %}{% endif %}
 	</div>
-</section>	
+</section>
 
 <article class="post-content">
   {{ content }}
@@ -45,6 +45,8 @@ layout: default
 	<p class="rss-subscribe text"><strong>Subscribe <a href="{{ "feed.xml" | prepend: site.baseurl }}">via RSS</a></strong></p>
 </section>
 
+
+<!--  daijian modify
 <section class="share">
   <span>Share: </span>
   {% for social in site.social %}
@@ -56,7 +58,8 @@ layout: default
     {% endif %}
   {% endfor %}
 </section>
-
+-->
+<!--
 {% if site.disqus_shortname %}
 {% unless page.disqus_disabled %}
 <section class="disqus">
@@ -76,6 +79,27 @@ layout: default
 </section>
 {% endunless %}
 {% endif %}
+-->
+<!-- 多说评论框 start -->
+{% if site.disqus_shortname %}
+{% unless page.disqus_disabled %}
+	<div class="ds-thread" data-thread-key="{{ page.id }}" data-title="{{ page.title }}" data-url="daijian.xyz/{{ page.url }}"></div>
+<!-- 多说评论框 end -->
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"daijian"};
+	(function() {
+		var ds = document.createElement('script');
+		ds.type = 'text/javascript';ds.async = true;
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+		ds.charset = 'UTF-8';
+		(document.getElementsByTagName('head')[0]
+		 || document.getElementsByTagName('body')[0]).appendChild(ds);
+	})();
+	</script>
 
+{% endunless %}
+{% endif %}
+<!-- 多说公共JS代码 end -->
 </div>
 </div>
